--- a/ECMTricket/Views/Movies/Index.cshtml
+++ b/ECMTricket/Views/Movies/Index.cshtml
@@ -15,7 +15,7 @@
                             <p class="card-text">
                                 <h5 class="card-title">
                                     @item.Name
-                                    <a class="text-white float-right"><i class="bi bi-pencil-square"></i></a>
+                                        <a class="text-white float-right"><i class="bi bi-pencil-square"></i></a>
                                 </h5>
                             </p>
                         </div>
@@ -32,24 +32,30 @@
                             <p class="card-text"><b>End Date: </b>@item.EndDate.ToString("dd MMM yy")</p>
                             <p class="card-text ">
                                 <b>Status: </b>
-                                @if(DateTime.Now >= item.StartDate && DateTime.Now <= item.EndDate)
+                                @if (DateTime.Now >= item.StartDate && DateTime.Now <= item.EndDate)
                                 {
                                     <span class="badge bg-success text-white">AVAILABLE</span>
-                                }else if (DateTime.Now > item.EndDate)
+                                }
+                                else if (DateTime.Now > item.EndDate)
                                 {
                                     <span class="badge bg-danger text-white">EXPIRED</span>
                                 }
-                                else{
+                                else
+                                {
                                     <span class="badge bg-primary text-white">UPCOMING</span>
                                 }
                             </p>
+
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="card-footer ">
                             <p class="card-text">
-                                <a class="btn btn-outline-primary float-right"><i class="bi bi-eye"></i>Show Detials</a>
-                                <a class="btn btn-success text-white"><i class="bi bi-cart-plus"></i>Add to Cart (Price @item.Price.ToString("c"))</a>
+                                <a class="btn btn-outline-primary float-right">
+                                    <i class="bi bi-eye-fill"></i> Show Details
+                                </a>
+                                <a class="btn btn-success text-white">
+                                <i class="bi bi-cart-plus"></i> Add to Cart (Price @item.Price.ToString("c"))</a>
                             </p>
                         </div>
                     </div>
